--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2021-02-07 15:39:47
+ * @LastEditTime: 2021-02-15 18:32:34
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: \vuedemo\public\index.html
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -13,5 +21,11 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      function htmlClick(label) {
+        console.log('label=', label)
+      }
+    </script>
+    <!-- <script src="../src/script/ant/domJs.js"></script> -->
   </body>
 </html>
